# platform.core.uifw.coregl

./: CMakeLists.txt  COPYING.MIT  COPYING.SGIFreeSWLicB_2_0  COPYING.ZLIB  COREGL.pc.in  Makefile  coding_guide.txt
debian/: changelog  control  libcoregl-dev.install.in  libcoregl.install.in  libcoregl.postinst  rules
include/EGL/: egl.h  sym_egl.h
include/GLES2/: def_gl.h  gl2.h
include/GLES3/: gl3.h
include_KHR/EGL/: egl.h  eglext.h  eglplatform.h
include_KHR/GLES/: gl.h  glext.h
include_KHR/GLES2/: gl2.h  gl2ext.h
include_KHR/GLES3/: gl3.h  gl31.h
lib/: libCOREGL.so.1.1
packaging/: coregl.spec
pkgconfig/: egl.pc  egl.pc.in  gles11.pc  gles11.pc.in  gles20.pc  gles20.pc.in  glesv1.pc  glesv1.pc.in  glesv1_cm.pc  glesv1_cm.pc.in  glesv2.pc  glesv2.pc.in
src/: coregl.c  coregl.h  coregl_export.c  coregl_export.h  coregl_export_egl.c  coregl_export_gl.c  coregl_fastpath.c  coregl_fastpath.h  coregl_fastpath_egl.c  coregl_fastpath_gl.c  coregl_fastpath_glx.c  coregl_fastpath_state.h  coregl_internal.h  coregl_override.c  coregl_thread_pthread.c  coregl_thread_pthread.h  coregl_thread_pthread_and_gcc_tlv.c  coregl_trace.c  coregl_wrappath.c  coregl_wrappath.h  coregl_wrappath_egl.c  coregl_wrappath_gl.c  coregl_wrappath_glx.c
src/dummy/: gles1.c
src/headers/: egl.h  gl.h  glx.h  sym.h  sym_egl.h  sym_gl.h  sym_gl1.h  sym_gl2.h  sym_gl_common.h  sym_glx.h
src/modules/: coregl_module.c  coregl_module.h
src/modules/appopt/: coregl_appopt.c  coregl_appopt.h  coregl_appopt_gl.c
src/modules/fastpath/: coregl_fastpath.c  coregl_fastpath.h  coregl_fastpath_egl.c  coregl_fastpath_gl.c  coregl_fastpath_state.h
src/modules/tracepath/: coregl_tracepath.c  coregl_tracepath.h  coregl_tracepath_egl.c  coregl_tracepath_gl.c  png.h  pngconf.h  zconf.h  zlib.h
src/wraps/: coregl_egl.c  coregl_gl.c  coregl_gl1.c  coregl_gl2.c  coregl_gl_common.c
